<resources>
    <string name="app_name">Niffer-Android</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="new_category">New category</string>
    <string name="edit_category">Edit category</string>
    <string name="archive_category">Archive category</string>
    <string name="unarchive_category">Unarchive category</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="close">Close</string>
    <string name="upload_new_image">Upload new image</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_picture">Profile picture</string>
    <string name="add_new_category">Add new category</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="add_new_spending">Add new spending</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="niffler">Niffler</string>
    <string name="statistics">Statistics</string>
    <string name="history_of_spendings">History of spendings</string>
    <string name="date">Date</string>
    <string name="choose_category">Choose category</string>
    <string name="description">Description</string>
    <string name="type_something">Type something</string>
    <string name="all_people">All people</string>
    <string name="friends">Friends</string>
    <string name="sign_out">Sign out</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="log_in">Log in</string>
    <string name="type_your_username">Type your username</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="create_new_account">Create new account</string>
    <string name="auth_cancelled">Authorization is cancelled</string>
    <string name="show_archived">Show archived</string>
    <string name="edit">Edit</string>
    <string name="edit_underlined"><u><b>Edit</b></u></string>
    <string name="welcome_to_niffler">Welcome to \n Niffler</string>
    <string name="zeroValue">0</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="avatar_preview">Avatar preview</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_name">Edit name</string>
    <string name="do_you_really_want_to_archive">Do you really want to archive category %1$s?</string>
    <string name="do_you_really_want_to_unarchive">Do you really want to unarchive category %1$s?</string>
    <string name="should_not_be_blank">Should not be blank</string>
    <string name="after_this_change_it_won_t_be_available_while_creating_spends">After this change it won\'t be available while creating spends</string>
    <string name="unfriend">Unfriend</string>
    <string name="unfriend_with">Are you sure that yoy want to delete %1$s from your friend list?</string>
    <string name="wait">Wait</string>
    <string name="date_format">DD.mm.YYYY</string>
    <string name="send_invitation">Send invitation</string>
    <string name="send_invitation_to">Send invitation to %1$s?</string>
    <string name="accept_invitation">Accept invitation</string>
    <string name="accept_invitation_from">Accept friend invitation from %1$s?</string>
    <string name="decline_invitation">Decline invitation</string>
    <string name="decline_invitation_from">Decline friend invitation from %1$s?</string>
    <string name="edit_spending">Edit spending</string>
    <string name="main_page">Main page</string>
</resources>