<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp">
    <TextView
        android:id="@+id/tvAddSpendingHeader"
        android:theme="@style/Base.Theme.NifferAndroid.HeaderTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_spending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        />
    <TextView
        android:id="@+id/tvLabelAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAddSpendingHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/amount"
        android:labelFor="@id/inputAmount"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAmountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvLabelAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currencySelectLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAmount"
            android:inputType="number"
            tools:text="@string/zeroValue"
            android:text="@string/zeroValue"
            android:backgroundTint="@color/gray_50"
            android:backgroundTintMode="add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvLabelCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAddSpendingHeader"
        app:layout_constraintStart_toStartOf="@+id/currencySelectLayout"
        android:text="@string/currency"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/currencySelect"
        android:textSize="14sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currencySelectLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCurrency"
        android:layout_marginTop="8dp"
        >
        <AutoCompleteTextView
            android:id="@+id/currencySelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="Р"
            android:backgroundTint="@color/gray_50"
            android:backgroundTintMode="add"
            app:simpleItems="@array/simple_items"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvLabelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inputAmountLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/category"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categorySelectLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCategory"
        android:layout_marginTop="12dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        >
        <AutoCompleteTextView
            android:id="@+id/categorySelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/choose_category"
            android:backgroundTint="@color/gray_50"
            android:backgroundTintMode="add"
            app:simpleItems="@array/simple_items"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvLabelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/categorySelectLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/date"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_cal"
        app:endIconTint="@color/light_primary"
        app:layout_constraintTop_toBottomOf="@id/tvLabelDate"
        app:layout_constraintStart_toStartOf="parent"
        app:hintEnabled="false"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDate"
            android:inputType="date"
            android:maxLength="10"
            android:hint="@string/date_format"
            android:backgroundTint="@color/gray_50"
            android:backgroundTintMode="add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inputDateLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/description"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvLabelDescription"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDescription"
            android:inputType="text"
            android:hint="@string/type_something"
            android:backgroundTint="@color/gray_50"
            android:backgroundTintMode="add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/inputDescriptionLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        style="@style/Widget.AppTheme.Niffler.SecondaryButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/inputDescriptionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        style="@style/Widget.AppTheme.Niffler.PrimaryButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>