<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <Button
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_back"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        app:strokeWidth="0dp"
        />

    <TextView
        android:id="@+id/tvEditProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="36sp"
        android:theme="@style/Base.Theme.NifferAndroid.HeaderTextAppearance"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfileImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="1dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfileHeader">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@color/gray_300"
            android:backgroundTint="@color/gray_300"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/photoEditButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/edit"
        android:textColor="@color/gray_1000"
        android:textSize="16sp"
        app:icon="@drawable/ic_edit"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:iconPadding="6dp"
        app:iconTint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/cvProfileImage"
        app:layout_constraintEnd_toEndOf="@+id/cvProfileImage"
        app:layout_constraintStart_toStartOf="@+id/cvProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/cvProfileImage"
        />
    <com.google.android.material.divider.MaterialDivider
        app:layout_constraintBottom_toTopOf="@+id/usernameDataContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/usernameDataContainer"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/photoEditButton"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textFontWeight="700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvUsernameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            tools:text="\@dtuchs" />
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        app:layout_constraintBottom_toBottomOf="@+id/usernameDataContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/profileDataContainer"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameDataContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textFontWeight="700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:layout_weight="1"
            tools:text="Dmitrii Tuchs"
            />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/edit_name"
            app:srcCompat="@drawable/ic_arrow_forward"
            app:tint="@color/gray_600"
            android:layout_gravity="start"
            />
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        app:layout_constraintBottom_toBottomOf="@+id/profileDataContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>