<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoriesContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    >

    <TextView
        android:id="@+id/tvCategoriesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="36sp"
        android:theme="@style/Base.Theme.NifferAndroid.HeaderTextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoriesContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNewCategory"
        style="@style/Widget.AppTheme.Niffler.SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/new_category"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategoriesHeader" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/categoriesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonNewCategory"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNewCategory"
        android:layout_marginEnd="8dp"
        android:text="@string/show_archived"
        app:thumbTint="@color/white"
        android:foregroundTint="@color/gray_100"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewCategory"
        tools:listitem="@layout/category_item" />

</androidx.constraintlayout.widget.ConstraintLayout>