<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetContainer"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        >
        <TextView
            android:id="@+id/tvLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_name"
            android:textSize="18sp"
            android:theme="@style/Base.Theme.NifferAndroid.HeaderTextAppearance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bottomSheetContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvLabelText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_50"
                android:backgroundTintMode="add"
                android:inputType="text"
                tools:text="Dima Tuchs" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancelEditText"
            style="@style/Widget.AppTheme.Niffler.SecondaryButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTextLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveEditText"
            style="@style/Widget.AppTheme.Niffler.PrimaryButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>