<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetContainer"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        >
        <LinearLayout
            android:id="@+id/uploadPhotoContainer"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/bottomSheetContainer"
            app:layout_constraintStart_toStartOf="parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_name"
                app:srcCompat="@drawable/ic_upload"
                app:tint="?colorPrimary"
                android:layout_gravity="start"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_from_gallery"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/edit_name"
                app:srcCompat="@drawable/ic_arrow_forward"
                app:tint="@color/gray_600"
                android:layout_gravity="end"
                />
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            app:layout_constraintBottom_toBottomOf="@+id/uploadPhotoContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/takePhotoContainer"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadPhotoContainer">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_name"
                app:srcCompat="@drawable/ic_camera"
                app:tint="?colorPrimary"
                android:layout_gravity="start"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/take_a_photo"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/edit_name"
                app:srcCompat="@drawable/ic_arrow_forward"
                app:tint="@color/gray_600"
                android:layout_gravity="start"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>